add UI test bundle

--- a/DogYears.xcodeproj/xcshareddata/xcschemes/DogYears.xcscheme
+++ b/DogYears.xcodeproj/xcshareddata/xcschemes/DogYears.xcscheme
@@ -49,6 +49,16 @@
                ReferencedContainer = "container:DogYears.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2A35E2C7224EFD590016F9F0"
+               BuildableName = "DogYearsUITests.xctest"
+               BlueprintName = "DogYearsUITests"
+               ReferencedContainer = "container:DogYears.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
